python/tests/testreport/00001_test_report_23_07_2025_11_56_34.txt
========================================
Testbericht
Datum und Uhrzeit: 23_07_2025_11_56_34
========================================

Geladene Testmodule:

unittest.case.FunctionTestCase (<lambda>) ... ERROR
unittest.case.FunctionTestCase (<lambda>) ... ERROR

======================================================================
ERROR: unittest.case.FunctionTestCase (<lambda>)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/tub/App/python/tests_runner.py", line 36, in <lambda>
    ImportError(f"Modul {modulename} konnte nicht geladen werden: {e}")
                                                                   ^
NameError: name 'e' is not defined

======================================================================
ERROR: unittest.case.FunctionTestCase (<lambda>)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/tub/App/python/tests_runner.py", line 36, in <lambda>
    ImportError(f"Modul {modulename} konnte nicht geladen werden: {e}")
                                                                   ^
NameError: name 'e' is not defined

----------------------------------------------------------------------
Ran 2 tests in 0.007s

FAILED (errors=2)
